add button to each planet

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Censo Galático</title>
 </head>
 <body>
+    <ul id="result">
+    </ul>
     <script src="js/script.js"></script>
 </body>
 </html>
