add planet info and styles

--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Censo Galático</title>
 </head>
 <body>
-    <ul id="result">
-    </ul>
+    <div class="container">
+        <ul id="result">
+            <h2 class="title">Planetas</h2>
+        </ul>
+        <div id="planet-info">
+            <h2 class="title">Planeta</h2>
+            <h3 id="name"></h2>
+            <p id="climate"></p> 
+            <p id="population"></p> 
+            <p id="terrain"></p> 
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
