--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Censo Galático</title>
 </head>
 <body>
+    <div class="seach-container">
+        <h1 class="title">Buscar Planeta</h1>
+        <input id="seach-input" type="text" placeholder="Digite um planeta">
+        <button id="seach-button">Buscar</button>
+    </div>
     <div class="container">
         <ul id="result">
             <h2 class="title">Planetas</h2>
