--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <p id="climate"></p> 
             <p id="population"></p> 
             <p id="terrain"></p> 
+            <table id="residents-table">
+            </table>
         </div>
     </div>
     <script src="js/script.js"></script>
